--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,11 @@ author:
   twitter: 'LuisAlejandro'
   facebook: 'martinez.faneyth'
 blog:
-  twitter: 'BlgHuntingBears'
-  facebook: 'BlogHuntingBears'
+  twitter: 'HuntingBearsWeb'
+  facebook: 'HuntingBearsWeb'
+  instagram: 'HuntingBearsWeb'
   googleplus: 'HuntingBearsVE'
-  feed: 'BlogHuntingBears'
+  feed: 'HuntingBearsWeb'
 url: 'http://huntingbears.com.ve'
 permalink: '/:title.html'
 paginate: 10
